Added Entity framework model and creating a list view for mails

--- a/CodeTechnologiesMVC/Views/Mail/Index.cshtml
+++ b/CodeTechnologiesMVC/Views/Mail/Index.cshtml
@@ -30,7 +30,7 @@
             @Html.DisplayNameFor(model => model.ScheduledDate)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.InstituteName)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.VoucherNo)
@@ -59,7 +59,7 @@
             @Html.DisplayFor(modelItem => item.ScheduledDate)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.InstituteName)
+            @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.VoucherNo)
