Added Prometric and Promotions modules with CRUD operations and Views

--- a/CodeTechnologiesMVC/Views/Prometric/Details.cshtml
+++ b/CodeTechnologiesMVC/Views/Prometric/Details.cshtml
@@ -57,6 +57,13 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.IsHired)
     </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.PerExamProfit)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.PerExamProfit)
+    </div>
 </fieldset>
 <p>
     @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
