--- a/CodeTechnologiesMVC/Views/Prometric/Delete.cshtml
+++ b/CodeTechnologiesMVC/Views/Prometric/Delete.cshtml
@@ -58,6 +58,13 @@
     <div class="display-field">
         @Html.DisplayFor(model => model.IsHired)
     </div>
+
+    <div class="display-label">
+         @Html.DisplayNameFor(model => model.PerExamProfit)
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.PerExamProfit)
+    </div>
 </fieldset>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
