--- a/CodeTechnologiesMVC/Views/Prometric/Edit.cshtml
+++ b/CodeTechnologiesMVC/Views/Prometric/Edit.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Prometric Details</h2>
+<br />
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
@@ -65,7 +66,7 @@
             @Html.LabelFor(model => model.IsHired)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.IsHired)
+            @Html.CheckBox("IsHired")
             @Html.ValidationMessageFor(model => model.IsHired)
         </div>
 
@@ -73,7 +74,7 @@
             @Html.LabelFor(model => model.PerExamProfit)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.PerExamProfit)
+            @Html.TextBoxFor(model => model.PerExamProfit, new {  @placeholder = "Enabled Only if Prometric is Hired!!" })
             @Html.ValidationMessageFor(model => model.PerExamProfit)
         </div>
         <p>
@@ -89,3 +90,22 @@
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
+
+<script src="~/Scripts/jquery-1.8.2.js"></script>
+<script type="text/javascript">
+    $(document).ready(initialize);
+    function initialize() {
+        $('#PerExamProfit').attr("disabled", "disabled");
+    }
+
+    $('#IsHired').click(function () {
+        if ($('#IsHired').is(':checked')) {
+            $('#PerExamProfit').removeAttr("disabled");
+        }
+        else {
+            $('#PerExamProfit').attr("disabled", "disabled");
+            $('#PerExamProfit').val("");
+
+        }
+    });
+</script>
