--- a/CodeTechnologiesMVC/Views/Prometric/Index.cshtml
+++ b/CodeTechnologiesMVC/Views/Prometric/Index.cshtml
@@ -9,9 +9,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table>
-    <tr>
-        <th>
+<table >
+    <tr style="border: dashed 1px black">
+        <th style="border: groove 1px black">
             @Html.DisplayNameFor(model => model.SiteId)
         </th>
         <th>
@@ -72,7 +72,14 @@
         </td>
 
         <td>
-            @Html.ActionLink("Show/Create", "IndexWithId", "Promotions", new { id = item.SiteId }, null);
+            @if(item.IsHired != true)
+            {
+                @Html.ActionLink("Show/Create", "IndexWithId", "Promotions", new { siteId = item.SiteId }, null);
+            }
+            else
+            {
+                <p> Promotions Not Allowed </p>
+            }
         </td>
     </tr>
 }
