Working Copy before call on 30th jan

--- a/CodeTechnologiesMVC/Views/Prometric/Create.cshtml
+++ b/CodeTechnologiesMVC/Views/Prometric/Create.cshtml
@@ -73,7 +73,7 @@
             @Html.LabelFor(model => model.PerExamProfit)
         </div>
         <div class="editor-field">
-            @Html.TextBoxFor(model => model.PerExamProfit, new { @readonly = "readonly", @placeholder = "Enabled Only if Prometric is Hired!!" })
+            @Html.TextBoxFor(model => model.PerExamProfit, new {  @placeholder = "Enabled Only if Prometric is Hired!!" })
             @Html.ValidationMessageFor(model => model.PerExamProfit)
         </div>
 
@@ -93,6 +93,11 @@
 
 <script src="~/Scripts/jquery-1.8.2.js"></script>
 <script type="text/javascript">
+    $(document).ready(initialize);
+    function initialize() {
+        $('#PerExamProfit').attr("disabled", "disabled");
+    }
+
     $('#IsHired').click(function () {
         if ($('#IsHired').is(':checked')) {
             alert('Clicked!');
