--- a/CodeTechnologiesMVC/Views/Mail/Index.cshtml
+++ b/CodeTechnologiesMVC/Views/Mail/Index.cshtml
@@ -11,6 +11,9 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+<p> 
+    @Html.ActionLink(" Bulk Mail Upload", "ImportMailExcelFileToDB")
+</p>
 @using (Html.BeginForm())
 {
     <p>
@@ -47,7 +50,6 @@
         <th>
             Client
         </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -78,11 +80,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Client)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
     </tr>
 }
